# herculesai_task

./: .gitignore  .tool-versions  README.md  analysis.py  app.py  common.py  pyproject.toml  pyrightconfig.json  run.py  terms_cache.py
data/: Contract + Amendment example v3 short.docx  Zero test task LLM 2024 1.docx
src/herculesai_task/: __init__.py  analysis.py  app.py  common.py  terms_cache.py
